RenderText’s minimum preferred width is incorrect when soft hyphens are used https://bugs.webkit.org/show_bug.cgi?id=89775

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/text/soft-hyphen-min-preferred-width.html

* rendering/RenderText.cpp:
(WebCore::hyphenWidth): Added this helper function.
(WebCore::RenderText::computePreferredLogicalWidths): In places where this function tests
for the soft hyphen character, added a check that the 'hyphens' style property is not set
to 'none', because in that case soft hyphens are not break opportunities. Also added an
explicit check to suppress break opportunities from isBreakable() if the occur after a
soft hyphen and 'hyphens' is set to 'none'. Finally, when measuring text up to a potential
line break, added the width of the hyphen string when needed.

LayoutTests:

* fast/text/soft-hyphen-min-preferred-width-expected.html: Added.
* fast/text/soft-hyphen-min-preferred-width.html: Added.



Canonical link: https://commits.webkit.org/107629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121050 268f45cc-cd09-0410-ab3c-d52691b4dbfc